--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
 <meta charset="utf-8">
 <title>Loading...</title>
-<meta http-equiv="refresh" content="0; URL=https://osforums.github.io/Test/Home/">
-<link rel="canonical" href="https://osforums.github.io/Test/Home/">
+<meta http-equiv="refresh" content="0; URL=https://osforums.github.io/Test/Home">
+<link rel="canonical" href="https://osforums.github.io/Test/Home">
